dark mode fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -71,10 +71,10 @@ strong {
 }
 body {
   overflow-x: hidden;
-  background-color: $white;
+  background-color: $green-darkest;
 }
 section {
-  background-color: $white;
+  background-color: $green-darkest;
 }
 .navyblue {
   color: $green;
